<resources>
    <string name="app_name">Quiz da Bíblia</string>
    <string name="package_name">quizbiblico.com.claudinei.quizbiblico</string>

    <!-- Tela de Login -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_uid">ID do usuário (uid)</string>

    <!-- Perfil -->
    <string name="perfil_musica">Musica</string>
    <string name="perfil_sons">Permite sons</string>
    <string name="perfil_vibracao">Permite vibração</string>
    <string name="perfil_bonus_tempo">+ 5 segundos</string>
    <string name="perfil_bonus_elimina">Elimina alternativa</string>
    <string name="perfil_bonus_referencia">Referência bíblica</string>
    <string name="perfil_pontuacao_questoes">Questões respondidas corretamente</string>

    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="action_reset">Recuperar acesso</string>
    <string name="action_keep_connected">Manter Conectado</string>
    <string name="action_sign_out">Desconectar</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_resetar_dados">Resetar</string>

    <string name="bemvindo">Seja bem-vindo!</string>
    <string name="telacadastro">Estamos muito felizes por você ter se cadastrado no nosso app. Preencha os dados abaixo por favor. Deus abençõe</string>
    <string name="titulomenu">Atualizar cadastro</string>

    <string name="statuson">Conectado</string>
    <string name="statusoff">Sem conexão</string>

    <string name="campos_obrigatorios_usuario_senha">Por favor, digite o usuário e a senha</string>

    <!-- Mensagens genéricas -->
    <string name="todos">Todos</string>
    <string name="todas">Todas</string>
    <string name="pontuacao">Pontuação</string>
    <string name="problema">Informe um problema</string>
    <string name="jogar">Jogar</string>
    <string name="carregando">Carregando</string>
    <string name="ultimobunus">Data do último bônus recebido</string>

    <!-- Facebook -->
    <string name="action_sign_in_facebook">Login com o Facebook</string>
    <string name="facebook_app_id">1899758983589113</string>

    <!-- Ações dos menus da tela de jogo -->
    <string name="jogo_bonus_maistempo">+ 5 segundos</string>
    <string name="jogo_bonus_eliminaalternativa">Elimina alternativa</string>
    <string name="jogo_bonus_referenciabiblica">Referência bíblica</string>

    <!-- Testamentos da bíblia -->
    <string name="testamentos">Testamentos</string>
    <string name="testamentos_antigo">Antigo testamento</string>
    <string name="testamentos_novo">Novo testamento</string>

    <!-- Seções da bíblia -->
    <string name="secoes">Seções da bíblia</string>
    <string name="secoes_pentateuco">Pentateuco</string>
    <string name="secoes_historia1">História (A. T.)</string>
    <string name="secoes_poesia">Poesia</string>
    <string name="secoes_profetas1">Profetas Maiores</string>
    <string name="secoes_profetas2">Profetas Menores</string>
    <string name="secoes_evangelhos">Evangelhos</string>
    <string name="secoes_historia2">História (N. T.)</string>
    <string name="secoes_cartas">Cartas</string>
    <string name="secoes_profecia">Profecia</string>

    <!-- Modos de jogo -->
    <string name="modos_de_jogo">Modos de jogo</string>
    <string name="modos_de_jogo_errou">Errou, acabou!</string>
    <string name="modos_de_jogo_se_vira_nos_180">Se vira com o tempo</string>

    <!-- Dificuldades -->
    <string name="dificuldades">Dificuldade</string>
    <string name="dificuldades_facil">Fácil</string>
    <string name="dificuldades_medio">Médio</string>
    <string name="dificuldades_dificil">Difícil</string>

    <!-- Tela de jogo -->
    <string name="bonus_insuficiente">Que pena! Você não tem bônus suficiente para %1$s.</string>

    <!-- Help -->
    <string name="como_funciona_pontuacao">Como funciona a pontuação?</string>
    <string name="help_como_funciona_pontuacao">A pontuaçao funciona do seguinte modo:\n
        \t\tQuando você acerta uma pergunta difícil: +%1$d pontos\n
        \t\tQuando você acerta uma pergunta média: +%2$d pontos\n
        \t\tQuando você acerta uma pergunta fácil: +%3$d pontos\n
        \t\tQuando você erra uma pergunta difícil: %4$d pontos\n
        \t\tQuando você erra uma pergunta média: %5$d pontos\n
        \t\tQuando você erra uma pergunta fácil: %6$d pontos\n
        \n
        Quando você acerta uma questão, você tem direito a mais um bônus que é relacionado ao tempo:\n
        \t\tQuando você acerta a questão com mais de 15 segundos restantes: +%7$d pontos\n
        \t\tQuando você acerta a questão com mais de 10 segundos restantes: +%8$d pontos\n
        \t\tQuando você acerta a questão com mais de 5 segundos restantes: +%9$d pontos
    </string>

    <string name="como_funcionam_os_powerups">O que são e como funcionam os PowerUPs?</string>
    <string name="help_como_funcionam_os_powerups">Atualmente, temos 3 PowerUPs:\n
        \t\t+ %1$d segundos para responder a questão\n
        \t\t\t\tAo acionar este PowerUP, você terá mais %1$d para responder aquela questão\n
        \t\tEliminação de alternativas incorretas\n
        \t\t\t\tA cada vez que você acionar este PowerUP será eliminada uma alternativa incorreta,l facilitando para que você acerte a resposta\n
        \t\tExibição da referência bíblica da questão\n
        \t\t\t\tAo acionar este PowerUP, será exibida uma janela com a referência bíblica daquela questão, apenas a referência bíblica (Livro, capítulo e versículo)\n
        \n
        \n
    </string>
    <!-- Inserir na string acima
            \t\t\tQuando você se cadastra no QuizBiblico, você já recebe %2$d de cada PowerUP, e então, a cada dia que entrar, recebe um pacote com mais %3$d PowerUPs.
    -->


</resources>