<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_below="@+id/logo"
    android:paddingBottom="4dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activityc_Cadastro"
    tools:showIn="@layout/activityl_cadastro">
<!-- -->
    <LinearLayout
        android:id="@+id/layout_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="152dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/txtNomeCadastro"
            android:layout_above="@+id/txtSenha"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="0.27"
            android:hint="@string/prompt_name"
            android:textColor="@android:color/white"
            android:textColorHint="@color/myWhite" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:layout_marginTop="440dp"
        android:baselineAligned="true">

        <Button
            android:id="@+id/btnResetar"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="false"
            android:text="@string/action_resetar_dados"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/myLightGray"
            android:layout_marginBottom="0dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="false"
            android:text="@string/action_salvar"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/myLightGray"
            android:layout_marginBottom="0dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:layout_width="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:text="@string/bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:id="@+id/txtBemVindo"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/myWhite" />

    <TextView
        android:text="@string/telacadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBemVindo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textColor="@color/myLightGray"
        android:textSize="18sp" />

</RelativeLayout>