<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="quizbiblico.com.claudinei.quizbiblico.activityc_Login"
    android:background="@color/myColor5">

    <RelativeLayout
        android:id="@+id/login_layout_carregando"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/login_margin_loading"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/login_progresso"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/other_loading" />

        <TextView
            android:id="@+id/login_carregando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_progresso"
            android:layout_centerHorizontal="true"
            android:text="@string/carregando"
            android:textColor="@color/myWhite"
            android:textSize="@dimen/font_size_title_large"
            android:textStyle="bold" />

    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_login">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/img_initialimage"
            android:id="@+id/imgLogo"
            android:layout_height="@dimen/login_img_logo_height" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relaLayout_main">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_large"
                android:paddingLeft="@dimen/margin_large"
                android:paddingRight="@dimen/margin_large"
                android:paddingTop="@dimen/margin_large"
                android:layout_marginTop="@dimen/login_img_logo_height"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/myWhite"
                        android:textSize="@dimen/login_size_field_font" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txtSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/myWhite"
                        android:textSize="@dimen/login_size_field_font" />

                </android.support.design.widget.TextInputLayout>

                <Switch
                    android:id="@+id/sw_KeepConnected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:paddingStart="@dimen/margin_extra_small"
                    android:text="@string/action_keep_connected"
                    android:textColor="@color/myWhite"
                    android:textColorLink="@color/myColor5"
                    android:textOff="@string/action_keep_connected"
                    android:textOn="@string/action_keep_connected"
                    android:textSize="@dimen/font_size_title_small" />

                <ImageView
                    android:id="@+id/progresso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:visibility="invisible" />

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="false"
            android:layout_marginTop="@dimen/login_margin_sign_buttons"
            android:baselineAligned="true"
            android:orientation="vertical">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="@dimen/login_size_buttons"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/action_sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/myLightGray"
                    android:textSize="@dimen/login_size_button_font"
                    android:textStyle="normal|bold" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="@dimen/login_size_buttons"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/action_sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/myLightGray"
                    android:textSize="@dimen/login_size_button_font"
                    android:textStyle="normal|bold" />
            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</android.support.design.widget.CoordinatorLayout>
