<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor5"
    tools:context="quizbiblico.com.claudinei.quizbiblico.activityc_Perfil"
    android:id="@+id/activity_perfil"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_perfil"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/perfil_imgPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img_perfil"
            android:contentDescription="Imagem Perfil"/>

        <ScrollView
            android:id="@+id/perfil_scrollView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_fields">

            <LinearLayout
                android:id="@+id/perfil_linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium">


                <LinearLayout
                    android:id="@+id/perfil_linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="@dimen/profile_field_edit"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/perfil_txtEmail"
                            android:layout_width="@dimen/profile_field_edit"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:enabled="false"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/white" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/perfil_btnEditEmail"
                        android:layout_width="@dimen/profile_edit_icon"
                        android:layout_height="@dimen/profile_edit_icon"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:src="@drawable/img_edit"
                        android:visibility="invisible"
                        android:contentDescription="Editar e-Mail"/>

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/perfil_txtNome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textAutoComplete"
                        android:hint="@string/prompt_name"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:id="@+id/perfil_linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="@dimen/profile_field_edit"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/perfil_txtSenha"
                            android:layout_width="@dimen/profile_field_edit"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:enabled="false"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/white" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/perfil_btnEditSenha"
                        android:layout_width="@dimen/profile_edit_icon"
                        android:layout_height="@dimen/profile_edit_icon"
                        android:layout_marginTop="@dimen/margin_extra_small"
                        android:src="@drawable/img_edit"
                        android:visibility="invisible"
                        android:contentDescription="Editar senha"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_preferencias"
                    android:contentDescription="Preferências"/>

                <Switch
                    android:id="@+id/perfil_swSons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_medium"
                    android:text="@string/perfil_sons"
                    android:textColor="@color/myLightGray"
                    android:textSize="@dimen/font_size_text_large" />

                <Switch
                    android:id="@+id/perfil_swVibracao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_medium"
                    android:text="@string/perfil_vibracao"
                    android:textColor="@color/myLightGray"
                    android:textSize="@dimen/font_size_text_large" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_powerups"
                    android:contentDescription="PowerUPs"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/perfil_txtDataUltimoBonus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:enabled="false"
                        android:hint="@string/ultimobunus"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/perfil_powerUP_tempo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="number"
                        android:hint="+ 5 segundos"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/perfil_powerUP_alternativa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="number"
                        android:hint="Elimina alternativa"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/perfil_powerUP_referencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="number"
                    android:hint="Referêcia bíblica"
                    android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_pontuacao"
                    android:contentDescription="Pontuação"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/perfil_pontuacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="number"
                        android:hint="Pontuação"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/perfil_pontuacao_acertos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="number"
                        android:hint="Questões respondidas corretamente"
                        android:textColor="@android:color/white" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_resetarpontuacao"
                    android:contentDescription="Resetar pontuação"
                    android:id="@+id/perfil_btnResetar"/>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/perfil_linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_extra_small"
            android:paddingTop="@dimen/margin_extra_small"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/perfil_btnCancelar"
                android:layout_width="@dimen/profile_buttons"
                android:layout_height="wrap_content"
                android:src="@drawable/img_cancelar"
                android:contentDescription="Cancelar"/>

            <ImageView
                android:id="@+id/perfil_btnSalvar"
                android:layout_width="@dimen/profile_buttons"
                android:layout_height="wrap_content"
                android:src="@drawable/img_salvar"
                android:contentDescription="Salvar"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>